--- a/css/base.css
+++ b/css/base.css
@@ -29,12 +29,12 @@ body {
   position: relative;
 }
 
-ul {
+/*ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
+*/
 h2 {
     font-size: 16px;
 }
