--- a/css/webapp.css
+++ b/css/webapp.css
@@ -7,3 +7,38 @@ section[role="region"] {
   position: fixed;
   width: 100%;
 }
+
+.top-bar-placeholder {
+  height: 4rem;
+}
+
+section[role="region"] > header:first-child menu[type="toolbar"] button {
+  height: 5rem;
+  min-width: 6rem;
+  width: auto;
+  margin-bottom: 0;
+  border-radius: 0;
+  line-height: 5rem;
+  float: left;
+  font-size: 2rem;
+  background: none;
+  padding: 0 1.75rem;
+  -moz-box-sizing: border-box;
+  text-align: center;
+  text-shadow: none;
+  position: relative;
+  z-index: 5;
+  background: url(../images/headers/ui/dark/separator.png) no-repeat left center;
+  /*border: 1px solid #ccc;*/
+}
+
+section[role="region"] > header:first-child menu[type="toolbar"] button:first-child {
+  background-image: none !important;
+}
+
+section[role="region"] > header:first-child menu[type="toolbar"] a:last-child,
+section[role="region"] > header:first-child menu[type="toolbar"] button:last-child {
+  background: url(../images/headers/ui/dark/separator.png) no-repeat left center;
+  margin-left: -0.2rem;
+  z-index: 1;
+}
