--- a/css/webapp.css
+++ b/css/webapp.css
@@ -22,17 +22,15 @@
 }
 
 #clock {
-  background-color: white;
-  bottom: 0;
-  color: maroon;
+  color: #333;
   font-size: 12px;
   font-weight: bold;
   line-height: 12px;
   margin: 0;
-  opacity: 0.7;
-  padding: 0;
+  padding: 3px 0 0 0;
   position: fixed;
-  right: 0;
+  top: 5rem;
+  left: 0;
 }
 
 
