--- a/css/webapp.css
+++ b/css/webapp.css
@@ -24,9 +24,11 @@
 #clock {
   color: #333;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 12px;
   margin: 0;
+  background-color: white;
+  opacity: 0.8;
   padding: 3px 0 0 0;
   position: fixed;
   top: 5rem;
@@ -56,7 +58,7 @@ section[role="region"] > header:first-child menu[type="toolbar"] button {
   border-radius: 0;
   line-height: 5rem;
   float: left;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   background: none;
   padding: 0 1.75rem;
   -moz-box-sizing: border-box;
