Add a round-complete counter

--- a/css/webapp.css
+++ b/css/webapp.css
@@ -48,6 +48,19 @@
   right: 0;
 }
 
+#completed {
+  color: #333;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+  margin: 0;
+  background-color: white;
+  opacity: 0.8;
+  padding: 3px 0 0 0;
+  position: fixed;
+  top: 5rem;
+  left: 0;
+}
 
 button.interval {
   width:  54px !important;
