--- a/css/webapp.css
+++ b/css/webapp.css
@@ -39,7 +39,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
-  margin: 0;
+  margin: 2px 0 0 0;
   background-color: white;
   opacity: 0.8;
   padding: 3px 0 0 0;
