--- a/css/webapp.css
+++ b/css/webapp.css
@@ -119,6 +119,7 @@ section[role="region"] > header:first-child menu[type="toolbar"] button:last-chi
 
 #lesson ul {
   padding: 0;
+  list-style-type: none;
 }
 
 #lesson li.history {
